# virtual_shake_robot_pybullet

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
action/: AF.action  LoadDispl.action  LoadPBR.action  RecordingAction.action  TrajectoryAction.action  VelocityTrajectory.action
config/: data_path.yaml  pbr_box.yaml  pbr_mesh.yaml  pbr_physics.yaml  physics_engine_parameters.yaml  physics_parameters.yaml  pyhsics_parameters.yaml  simulation_parameters.csv  sp1.yaml  sp1_0.yaml  sp1_1.yaml  sp1_10.yaml  sp1_11.yaml  sp1_12.yaml  sp1_13.yaml  sp1_14.yaml  sp1_15.yaml  sp1_16.yaml  sp1_17.yaml  sp1_18.yaml  sp1_19.yaml  sp1_2.yaml  sp1_20.yaml  sp1_21.yaml  sp1_22.yaml  sp1_23.yaml  sp1_24.yaml  sp1_25.yaml  sp1_26.yaml  sp1_27.yaml  sp1_28.yaml  sp1_29.yaml  sp1_3.yaml  sp1_30.yaml  sp1_31.yaml  sp1_32.yaml  sp1_33.yaml  sp1_34.yaml  sp1_35.yaml  sp1_36.yaml  (+70 more)
data/: .~lock.PGVA_Error_Comparison.csv#  .~lock.Results_Granite.xlsx#  .~lock.earthquake_batch_results.csv#  .~lock.simulation_metrics.csv#  PGVA_Error_Comparison.csv  PGV_PGA_Results.csv  Results_Granite.xlsx  combined_simulation_data.csv  earthquake_batch_results.csv  exp_time_sim_1sim_1.csv  iteration_results_lateralFriction.csv  iteration_results_restitution.csv  manual_metrics_results.csv  optimization_results.xlsx  simulation_1.csv  simulation_10.csv  simulation_11.csv  simulation_12.csv  simulation_13.csv  simulation_14.csv  simulation_15.csv  simulation_16.csv  simulation_17.csv  simulation_18.csv  simulation_19.csv  simulation_2.csv  simulation_20.csv  simulation_21.csv  simulation_22.csv  simulation_23.csv  simulation_24.csv  simulation_3.csv  simulation_4.csv  simulation_5.csv  simulation_6.csv  simulation_7.csv  simulation_8.csv  simulation_9.csv  simulation_metrics.csv  sp1_0.yaml  (+12 more)
docker/: Dockerfile
docs/: Apptainer_installation.md  Collision_issue.md  Inertia.md  Iterative_experiments.md  Memory_Issue.md  ROS_installation.md  Ros_installation.md  VSR2_structure.md  analysis.md  docker_installation.md  inertia.md  iterative_optimisation.md  tutorial.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: box_launch.py  mesh_launch.py  node.launch.py  node_launch.py  sp1_0.launch.py  sp1_1.launch.py  sp1_10.launch.py  sp1_11.launch.py  sp1_12.launch.py  sp1_13.launch.py  sp1_14.launch.py  sp1_15.launch.py  sp1_16.launch.py  sp1_17.launch.py  sp1_18.launch.py  sp1_19.launch.py  sp1_2.launch.py  sp1_20.launch.py  sp1_21.launch.py  sp1_22.launch.py  sp1_23.launch.py  sp1_24.launch.py  sp1_25.launch.py  sp1_26.launch.py  sp1_27.launch.py  sp1_28.launch.py  sp1_29.launch.py  sp1_3.launch.py  sp1_30.launch.py  sp1_31.launch.py  sp1_32.launch.py  sp1_33.launch.py  sp1_34.launch.py  sp1_35.launch.py  sp1_36.launch.py  sp1_37.launch.py  sp1_38.launch.py  sp1_39.launch.py  sp1_4.launch.py  sp1_40.launch.py  (+63 more)
log/: latest_build
msg/: TrajectoryAction.msg
src/: calc.py  check_pkl.py  control_node.py  data_loader.py  earthquake_parser.py  example_3.py  example_4.py  ground_motion.py  ground_motion_velocities.tab  inertia.py  pbr_loader.py  perception_node.py  plotter.py  rock_analysis.py  (+5 more)
(+557 files in other folders)
