<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>virtual_shake_robot_pybullet</name>
  <version>0.0.0</version>
  <description>A ROS2 package for simulating a robot using PyBullet physics engine integrated with ROS2 interfaces.</description>
  <maintainer email="zchen256@asu.edu">Zhiang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch_ros</depend> 
  <depend>rclpy</depend> 
  <depend>action_msgs</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>rosidl_default_generators</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>pybullet</exec_depend> 
  <exec_depend>simualation_node</exec_depend>
  <exec_depend>control_node</exec_depend>
  <exec_depend>perception_node</exec_depend>
 
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
